--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -218,8 +218,10 @@
   .card
     width: 100%
   .footer
+    padding-bottom: 21px
     &-wrapper
       grid-template-columns: 1fr
+      grid-column-gap: 0
       grid-row-gap: 30px
     &__logo
       grid-row: 1
@@ -263,3 +265,4 @@
       display: block
       &-wrapper
         padding-bottom: 10px
+  
